# embedding-forge

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
src/: __init__.py  document_handler.py  embedding_manager.py  file_processor.py  message_processor.py
src/clients/: __init__.py  openai_embeddings.py  pinecone_client.py
src/scripts/: generate_bucket_embeddings.py
src/utils/: __init__.py  document_processor.py  embeddings.py
